# Genai-Task

./: pyproject.toml
Section A/: .env.local  VectorStore.py
Section B/: Dockerfile  api.py  requirements.txt
Section C/: app.py  requirements.txt
local_db/: chroma.sqlite3
