[tool.poetry]
name = "fastapi-chroma-query"
version = "0.1.0"
description = "A fastapi applicationfor querying a vector database with embeddings using ChromaDB and Sentence Transformers"
authors = ["Your Name <you@example.com>"]
license = "n"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
